--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="BoogyOogieBumBum"
+name="StandStandRev"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/StandStandRev0-0-2.exe"
+export_path="builds/StandStandRev0-0-3.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -36,7 +36,7 @@ application/icon="res://Sprites/pirouette_sketch.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
-application/product_version="0.0.2"
+application/product_version="0.0.3"
 application/company_name=""
 application/product_name="StandStandRevolution"
 application/file_description=""
