--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/StandStandRev_develope.exe"
+export_path="builds/StandStandRev_1-0-0.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -18,7 +18,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -36,8 +36,8 @@ application/icon="res://Sprites/pirouette_sketch.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
-application/product_version="0.0.7"
-application/company_name=""
+application/product_version="1.0.0"
+application/company_name="PhilAirdash & Smart-in-Dev"
 application/product_name="StandStandRevolution"
 application/file_description=""
 application/copyright=""
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/boogieOogieBumBum/boogie.html"
+export_path="Builds/Web2/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -87,10 +87,10 @@ vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
-html/canvas_resize_policy=2
+html/canvas_resize_policy=1
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=3
 progressive_web_app/orientation=0
